--- a/05_box-model.html
+++ b/05_box-model.html
@@ -10,9 +10,21 @@
     <title>Box Model</title>
     
     <style>
+    /* CSS Reset*/
+    *{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     .box{
       background: #f4f4f4;
-      border: 2pix #777 solid;
+      border: 2px #777 solid;
+      width: 500px;
+      /*All sided Padding*/
+      padding: 20px;
+      /*All sided margin*/
+      margin: 20px;
     }
 
     </style>
