--- a/12_index.html
+++ b/12_index.html
@@ -7,13 +7,27 @@
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <!-- <meta name="robots" content="NOINDEX, NOFOLLOW"> --DO NOT INDEX WEBPAGE-->
-    <title>My Website</title>
-  </head>
+    <title>Test File</title>
 
+    <style>
+
+    h1{
+       /* display: none; */
+      /*visibility: hidden;*/
+      color: red !important;
+    }
+    .heading{
+     color: blue;
+    }
+
+    </style>
+  </head>
+  
   <body>
     <div align="center">
-      <h1>My Website</h1>
+      <h1 class="heading">Heading</h1>
       <p>This is my first website</p>
+      <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
     </div> 
   </body>
 
